# hierArchical

./: README.md  environment.yaml  geometry.py  helpers.py  items.py  pyproject.toml  pytest.ini  relationship_enhancement_plan.md  requirements.txt  simple_floorplan.md  simple_floorplan.py  triple_geometry_implementation_plan.md  utils.py
content/GEALAN_S9000_Front-Door-IFC/: GEALAN_S9000_Door_1100x2000-IFC2X3.ifc  GEALAN_S9000_Door_1100x2000-IFC4.ifc  GEALAN_S9000_Door_1100x2100-IFC2X3.ifc  GEALAN_S9000_Door_1100x2100-IFC4.ifc  GEALAN_S9000_Door_1100x2200-IFC2X3.ifc  GEALAN_S9000_Door_1200x2100-IFC2X3.ifc
content/Items/GEALAN_S9000_Front-Door-IFC/: GEALAN_S9000_Door_1100x2200-IFC4.ifc  GEALAN_S9000_Door_1200x2100-IFC4.ifc  GEALAN_S9000_Door_1200x2200-IFC2X3.ifc  GEALAN_S9000_Door_1200x2200-IFC4.ifc
docs/: Dataset.md  Features.md
examples/: creating_models.md  creating_models.py  creating_objects.py  creating_relationships.py  model_rag.py  simple_floorplan.py
heirarchical/: helpers.py  items.py  utils.py
hierarchical/: abstractions.py  geometry.py  helpers.py  items.py  relationships.py  units.py  utils.py
tests/: GEOMETRY_TESTS_COMPLETE.md  INFRASTRUCTURE_COMPLETE.md  ITEMS_TESTS_COMPLETE.md  UNIT_TESTING_PLAN.md  WEEK3_TESTING_COMPLETE.md  __init__.py  conftest.py  test_infrastructure.py
tests/fixtures/: __init__.py  reference_data.json  sample_geometries.py
tests/property/: __init__.py  test_geometry_properties.py  test_items_properties.py
tests/unit/: __init__.py  test_geometry.py  test_items.py
