[project]
name = "hierarchical"
version = "0.1.0"
description = "A hierarchical, spatially-aware dataset for architecture"
authors = [{ name = "Benjamin Friedman", email = "benny.friedman2@gmail.com" }]
dependencies = [
    "scipy",
    "numpy",
    "plotly",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["content*", "tests*", "docs*", "examples*"]